# ebpf-talk

./: .gitignore  DEMO.md  README.md  aya-env-template.nix  flake.nix
demos/: README.md
demos/01-packet-monitor/: Cargo.toml  README.md
demos/01-packet-monitor/demo/: Cargo.toml  build.rs
demos/01-packet-monitor/demo-common/: Cargo.toml
demos/01-packet-monitor/demo-ebpf/: Cargo.toml
demos/01-packet-monitor/demo-ebpf/src/: main.rs
demos/01-packet-monitor/demo/src/: main.rs
demos/02-process-tracker/: Cargo.toml  README.md
demos/02-process-tracker/file-tracker/: Cargo.toml  build.rs
demos/02-process-tracker/file-tracker-common/: Cargo.toml
demos/02-process-tracker/file-tracker-ebpf/: Cargo.toml
demos/02-process-tracker/file-tracker-ebpf/src/: main.rs
demos/02-process-tracker/file-tracker/src/: main.rs
slides/: presentation.md
