[package]
name = "demo"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
demo-common = { path = "../demo-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
clap = { workspace = true, features = ["derive"] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
demo-ebpf = { path = "../demo-ebpf" }

[[bin]]
name = "demo"
path = "src/main.rs"
