[package]
name = "file-tracker"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
file-tracker-common = { path = "../file-tracker-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
] }
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
file-tracker-ebpf = { path = "../file-tracker-ebpf" }

[[bin]]
name = "file-tracker"
path = "src/main.rs"
